plugins {
    id 'groovy'
    id 'java'
    id 'org.jetbrains.intellij' version '0.7.3'
}

group 'io.github.zjay'
version '2023.6.19'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    compile 'com.alibaba:fastjson:1.2.83'
    compile 'cn.hutool:hutool-all:5.7.9'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java']
    version '2021.3'//2021.3、2021.1、2020.3.4
    updateSinceUntilBuild false
    downloadSources true
}
patchPluginXml {
    changeNotes """

    <h3>v2023.6.19</h3 >
    <ul>
        <li>编辑器增加Soft-wrap支持，并且支持美化、html预览</li>
    </ul>
    <h3>v2023.6.16</h3 >
    <ul>
        <li>支持Dubbo2.X版本的请求生成及简单测试(点send按钮)
        注：1、暂时只支持官方提供的@Service、@DubboService注解，xml文件的支持会在后续版本中提供(但是不一定)；
            2、测试方式为telnet方式，返回结果可能会存在问题(可以多请求几次)；
            3、3.X版本想要使用的需要在项目中引入TelnetHandler的实现；
            4、存在BUG请发邮件给我
        </li>
        <li>其他优化及BUG修复</li>
    </ul>
    <h3>v2023.6.12</h3 >
    <ul>
        <li>Other optimizations and bug fixes</li>
    </ul>
    <h3>v2023.6.9</h3 >
    <ul>
       <li>Add automatic spring generation method(right click choose Generate Spring Method or alt \\): 
       
       You only need to fill out a form according to the requirements, which will automatically generate code for the controller layer and service layer for you</li>
        <li>Other optimizations and bug fixes</li>
    </ul>

    <h3>v2023.5.21</h3 >
    <ul>
            <li>Version compatibility is relaxed, and restrictions can support more versions</li>
        </ul>

    <h3>v2023.5.20</h3 >
    <ul>
            <li>1、Add history query and request in APIs tab</li>
            <li>2、Add a request timeout setting in the configuration</li>
            <li>3、Other optimizations and bug fixes.</li>
        </ul>
    """
}
test {
    useJUnitPlatform()
}
runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
    jbrVersion 'jbrsdk-11_0_10-osx-x64-b1314.58'
    autoReloadPlugins true
}

runPluginVerifier {
    ideVersions = ["IIU-2020.3.1", "IIU-2021.2.1"]
//  https://github.com/JetBrains/intellij-plugin-verifier/releases
//  https://data.services.jetbrains.com/products?code=IIU
    verifierPath = '/Users/wilson/Downloads/verifier-cli-1.266-all.jar'
}
